--- a/index.css
+++ b/index.css
@@ -746,7 +746,7 @@ body {
 
 .modal-content .project-form {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr; /* Mobile-first */
     gap: 1.25rem;
 }
 
@@ -1801,8 +1801,7 @@ body {
 }
 
 /* Word wrapping for table cells */
-.dashboard-data-table td,
-.projects-actions-list-page .user-list-table td {
+.user-list-table td {
     word-wrap: break-word; /* Ensure content wrapping */
 }
 
@@ -1891,6 +1890,10 @@ body {
     }
 
     .input-grid-col-2 {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .modal-content .project-form {
         grid-template-columns: 1fr 1fr;
     }
 
